DONE: Preloader (#29)
* Use of version file in central plugin repo
* Finish preloader
* Compare version of latest github release
* Extract some methods and constants